home page - service section - overflow-x scroll bug

--- a/src/styles/Services.module.css
+++ b/src/styles/Services.module.css
@@ -45,7 +45,7 @@
   margin: 5rem 0; */
   /* margin-left: 5rem; */
   margin: 0 auto;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
